--- a/templates/header.html
+++ b/templates/header.html
@@ -17,29 +17,7 @@
       nomodule
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
     ></script>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../static/css/style.css" />
     <title>Envisage</title>
   </head>
-  <body>
-    <header class="header"></header>
-    <div class="container">
-      <div class="form-page">
-        <img src="imgs/new logo.png" class="logo" />
-        <div class="header">
-          <h1 class="heading">Envisage</h1>
-          <ion-icon name="heart-outline"></ion-icon>
-        </div>
-
-        <div class="app">
-          <p class="text">Empower your day, one task at a time.</p>
-        </div>
-        <div class="row">
-          <input type="text" class="input" placeholder="Add your task here" />
-          <button class="edit-task">
-            <ion-icon name="arrow-up-outline" class="arrow-icon"></ion-icon>
-          </button>
-        </div>
-      </div>
-    </div>
-  </body>
 </html>
