--- a/templates/add.html
+++ b/templates/add.html
@@ -13,18 +13,11 @@
         <h1 class="heading">Envisage</h1>
         <ion-icon name="heart-outline"></ion-icon>
       </div>
-
       <div class="app">
         <p class="text">Empower your day, one task at a time.</p>
       </div>
-      <div class="row">
-        <input type="text" class="input" placeholder="Add your task here" />
-        <button class="edit-task">
-          <ion-icon name="arrow-up-outline" class="arrow-icon"></ion-icon>
-        </button>
-        <!-- {{render_form(form, novalidate=True, button_map={"submit": "primary"})
-        }} -->
-      </div>
+      <div class="row"></div>
+      {{render_form(form, novalidate=True, button_map={"submit": "primary"}) }}
     </div>
   </div>
 </body>
